--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "front",
+  "name": "Orcamentos",
   "version": "0.1.0",
   "private": true,
+  "description": "Projeto 1",
+  "author": "Kevin Siman",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -22,5 +24,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.0.7"
   }
 }
